Fix root namespaces

--- a/kiki-viewer/kiki-viewer.csproj
+++ b/kiki-viewer/kiki-viewer.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <RootNamespace>kiki.viewer</RootNamespace>
     <RazorLangVersion>3.0</RazorLangVersion>
   </PropertyGroup>
 
