--- a/kiki-scraper/kiki-scraper.csproj
+++ b/kiki-scraper/kiki-scraper.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp3.1</TargetFramework>
-        <RootNamespace>kiki_scraper</RootNamespace>
+        <RootNamespace>kiki.scraper</RootNamespace>
     </PropertyGroup>
 
 </Project>
