--- a/kiki-shared/kiki-shared.csproj
+++ b/kiki-shared/kiki-shared.csproj
@@ -2,7 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <RootNamespace>kiki_shared</RootNamespace>
+    <RootNamespace>kiki.shared</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="2.10.4" />
+  </ItemGroup>
 
 </Project>
