temp web interface

--- a/kiki-viewer/kiki-viewer.csproj
+++ b/kiki-viewer/kiki-viewer.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Blazor.HttpClient" Version="3.2.0-preview1.20073.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\kiki-shared\kiki-shared.csproj" />
+  </ItemGroup>
+
 </Project>
